# protopyp_template

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  MANIFEST.in  Makefile  README.md  constraints.txt  init_env.sh  pyproject.toml
.github/workflows/: pypackage.yml
requirements/: dev.txt
template/: .coveragerc.jinja  .gitignore.jinja  Makefile.jinja  README.md.jinja  constraints.txt  copier.yml  init_env.sh.jinja  pyproject.toml.jinja  setup.cfg.jinja  tox.ini.jinja  {{ _copier_conf.answers_file }}.jinja
template/.github/workflows/: pypackage.yml
template/constraints/: shared.txt
template/src/{{short_name}}/: __main__.py
template/tests/: test_{{short_name}}.py.jinja
tests/: test_protopyp_template.py
